--- a/public/live.html
+++ b/public/live.html
@@ -588,6 +588,18 @@
         flames = cakeData.flames;
       }
 
+      // Command indicator dot (red glow above shell)
+      const indicatorMat = new THREE.MeshStandardMaterial({
+        color: 0xff2222, emissive: 0xff0000, emissiveIntensity: 2,
+        transparent: true, opacity: 0,
+      });
+      const indicator = new THREE.Mesh(
+        new THREE.SphereGeometry(0.15, 8, 6), indicatorMat
+      );
+      indicator.position.set(0, 0.75, 0);
+      indicator.visible = false;
+      group.add(indicator);
+
       // Initial position & heading
       const dir = st.direction || 1;
       // direction 1 = moving right (+X), heading = -π/2
@@ -634,13 +646,17 @@
         phase: st.phase || Math.random() * Math.PI * 2,
         flipperFreq: 2.5 + speed * 0.8,
         bankAngle: 0,      // smoothed bank
+        spinRemaining: 0,
+        indicatorTimer: 0,
+        cakeTimer: 0,
+        comeCloserTimer: 0,
         // Name
         nameOpacity: 0,
         nameTimer: 0,
         namePhase: st.name ? 'fadein' : 'done',
       };
 
-      return { group, state, labelDiv, shellMat, flames };
+      return { group, state, labelDiv, shellMat, flames, indicator, indicatorMat };
     }
 
     // --- Movement ---
@@ -684,14 +700,18 @@
       s.rawTargetP = Math.atan2(desY, Math.max(hLen, 0.01));
       s.rawTargetP = Math.max(-0.35, Math.min(0.35, s.rawTargetP));
 
+      // Come-closer boost: snappier turning & movement when active
+      const boostActive = s.comeCloserTimer > 0;
+      if (boostActive) s.comeCloserTimer -= dt;
+
       // Double-smoothing: raw → smoothTarget → heading
       // Layer 1: smooth the target itself (absorbs jumps)
-      const smoothRate = Math.min(1, dt * 0.8);
+      const smoothRate = Math.min(1, dt * (boostActive ? 3.0 : 0.8));
       s.smoothTargetH = lerpAngle(s.smoothTargetH, s.rawTargetH, smoothRate);
       s.smoothTargetP += (s.rawTargetP - s.smoothTargetP) * smoothRate;
 
       // Layer 2: heading follows smoothed target
-      const turnRate = Math.min(1, dt * 1.2);
+      const turnRate = Math.min(1, dt * (boostActive ? 5.0 : 1.2));
       s.heading = lerpAngle(s.heading, s.smoothTargetH, turnRate);
       s.swimPitch += (s.smoothTargetP - s.swimPitch) * turnRate;
 
@@ -701,9 +721,10 @@
       const dy = Math.sin(s.swimPitch);
       const dz = -Math.cos(s.heading) * cp;
 
-      pos.x += dx * s.speed * dt;
-      pos.y += dy * s.speed * dt;
-      pos.z += dz * s.speed * dt;
+      const moveSpeed = s.speed * (boostActive ? 2.0 : 1.0);
+      pos.x += dx * moveSpeed * dt;
+      pos.y += dy * moveSpeed * dt;
+      pos.z += dz * moveSpeed * dt;
 
       // Gentle bob
       pos.y += Math.sin(time * 1.2 + s.phase) * 0.012;
@@ -754,6 +775,25 @@
           // Inner flame: faster flicker
           f.inner.scale.y = 0.5 + Math.sin(flicker * 1.5) * 0.15;
           f.inner.scale.x = 0.4 + Math.sin(flicker * 2.1) * 0.1;
+        }
+      }
+
+      // --- Command indicator pulse ---
+      if (s.indicatorTimer > 0) {
+        s.indicatorTimer -= dt;
+        const pulse = 0.6 + 0.4 * Math.sin(s.indicatorTimer * 10);
+        const fade = Math.min(1, s.indicatorTimer * 2); // fade out in last 0.5s
+        entry.indicatorMat.opacity = pulse * fade;
+        entry.indicator.visible = s.indicatorTimer > 0;
+      }
+
+      // --- Cake auto-remove timer ---
+      if (s.cakeTimer > 0 && entry.flames) {
+        s.cakeTimer -= dt;
+        if (s.cakeTimer <= 0) {
+          const existing = entry.group.getObjectByName('cake');
+          if (existing) entry.group.remove(existing);
+          entry.flames = null;
         }
       }
 
@@ -1256,10 +1296,12 @@
     // --- Command handlers ---
     function handleCommand(entry, command) {
       const s = entry.state;
+      s.indicatorTimer = 2.5; // flash red dot for all commands
+
       switch (command) {
-        case 'come_closer':
-          // Aim at front-center of tank (near camera)
-          const targetX = 0, targetY = 0, targetZ = TANK.zMax - 2;
+        case 'come_closer': {
+          // Aim at front-center of tank (within wall-safe zone)
+          const targetX = 0, targetY = 0, targetZ = TANK.zMax - 6;
           const dx = targetX - entry.group.position.x;
           const dy = targetY - entry.group.position.y;
           const dz = targetZ - entry.group.position.z;
@@ -1267,27 +1309,25 @@
           s.wanderHeading = Math.atan2(-dx, -dz);
           s.wanderPitch = Math.atan2(dy, Math.max(hLen, 0.01));
           s.wanderPitch = Math.max(-0.35, Math.min(0.35, s.wanderPitch));
-          s.wanderTimer = 10; // hold this heading long enough to arrive + show off
+          s.wanderTimer = 12;
           s.wanderInterval = s.wanderTimer;
+          s.comeCloserTimer = 6; // boost speed & responsiveness for 6s
           break;
+        }
 
         case 'birthday_cake':
-          // Toggle cake: add if missing, remove if present
+          // Add cake (or refresh timer if already present)
           if (!entry.flames) {
             const cakeData = createBirthdayCake();
             entry.group.add(cakeData.cakeGroup);
             entry.flames = cakeData.flames;
-          } else {
-            // Remove existing cake
-            const existing = entry.group.getObjectByName('cake');
-            if (existing) entry.group.remove(existing);
-            entry.flames = null;
           }
+          s.cakeTimer = 10; // auto-remove after 10 seconds
           break;
 
         case 'spin':
-          // Trigger a barrel roll
-          s.spinRemaining = (s.spinRemaining || 0) + Math.PI * 2;
+          // Trigger a dramatic barrel roll (2 full rotations)
+          s.spinRemaining = (s.spinRemaining || 0) + Math.PI * 4;
           break;
       }
     }
